=== Version 0.9.9
* Enhancements
  * Better support for using Regexp
  * Added new page_url_value method that is created when you define page_url to return the value
  * Updated to use the latest watir-webdriver 0.6.9
  * Updated to use the latest selenium-webdriver 2.42.0
* Fixes
  * Improved handling of index locator

=== Version 0.9.8 / 2014-3-16
* Enhancements
  * populate_page_with not supports radio groups

=== Version 0.9.7 / 2014-2-26
* Enhancements
  * Table now supports exists?
  * super called when factory method invoked with non PageObject class
  * Updated to use the latest watir-webdriver 0.6.8
  * Updated to use the latest selenium-webdriver 2.40.0

=== Version 0.9.6 / 2014-2-4
* Enhancements
  * Updated to use the latest watir-webdriver 0.6.7
* Fixes
  * Added in_iframe methods to match the updates to the watir-webdriver gem.

=== Version 0.9.5 / 2014-1-22
* Enhancements
  * Updated to use the latest selenium-webdriver 2.39.0
  * Added href method to Link
  * Added generation of plural version of basic types on class
  * Added new accessors for radio button group (Thanks Travis Fillmore)

=== Version 0.9.4 / 2013-11-29
* Enhancements
  * Added ability for execute_scripts to accept arguments (Thanks Justin Ko)
  * Added ability to identify frame using a regular expression when using Watir

=== Version 0.9.3 / 2013-10-24
* Enhancements
  * Added class_name method to Element
  * Added select_text method to Element
  * Added wait_for_expected_title and expected_element_visible methods (Thanks smartkiwi)
  * Updated to use the latest selenium-webdriver 2.37.0
* Fixes
  * Fixed issue with custom widgets on Ruby 1.8.7 (Thanks X Zhang)

=== Version 0.9.2 / 2013-8-23
* Enhancements
  * Added elements method to accessor so one can gen methods for generic collections of elements
  * Updated to use the latest selenium-webdriver 2.35.0

=== Version 0.9.1 / 2013-7-16
* Enhancements
  * Added css locator support for Image (Thanks Elben Shira)
* Fixes